# OSC-RL

./: README.md  RoboticHarvester.ipynb
experimental/: CMakeLists.txt  franka_control_test_plugins.xml  package.xml
experimental/config/: robot_controllers.yaml
experimental/include/: utils.h
experimental/include/franka_control_test/: robot_xyz_controller.h  utils.cpp  utils.h
experimental/launch/: franka_control2.launch  robot_controllers_osc.launch
experimental/msg/: VisualDelta.msg
experimental/scripts/: NEURAL_BRAIN.pth  RL_MOTION_PLANNER.py
experimental/scripts/utils/: AuxFuncs.py  NetModels.py  RlAlgorithms.py  TrainingFuncs.py
experimental/src/: franka_control_node2.cpp  robot_OSC_controller.cpp  utils.cpp
experimental/srv/: SetPointRL.srv  SetPointXYZ.srv
simulation/: CustomEnv.py  RoboticHarvester.ipynb
simulation/abr_control/arms/: base_config.py  mujoco_config.py
simulation/abr_control/controllers/: controller.py  hierarchy_controller.py  joint_limit_controller.py  osc.py
simulation/abr_control/interfaces/: __init__.py  coppeliasim.py  interface.py  mujoco.py
simulation/abr_control/interfaces/coppeliasim_files/: sim.py  simConst.py
simulation/abr_control/utils/: download_meshes.py  transformations.py
simulation/assets/: franka_research3.xml
simulation/utils/: AuxFuncs.py  NetModels.py  RlAlgorithms.py  TrainingFuncs.py
