<?xml version="1.0"?>
<package format="2">
  <name>franka_control_test</name>
  <version>0.1.0</version>
  <description>Pruebitas</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pitufo2bot@todo.todo">pitufo2bot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>franka_gripper</depend>
  <depend>franka_hw</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  
  <!-- Para las imagenes -->
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  
  <!-- <exec_depend>roscpp</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_gazebo</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/franka_control_test_plugins.xml" />
  </export>
</package>
